History of feedfeeder
=====================

2.0 (unreleased)
----------------

- Nothing changed yet.


1.0.1 (2010-04-02)
------------------

- Fix errors when viewing a folder or item on Plone 4, while still
  keeping Plone 2.5 and Plone 3 compatibility.
  Refs http://plone.org/products/feedfeeder/issues/25
  [maurits]


1.0 (2009-12-23)
----------------

- Some summaries are a snippet from the full content, and then they
  can contain broken html; in this case we are now saving the raw
  broken html, parsing it only when possible.
  [lucmult]


1.0rc7 (2009-11-06)
-------------------

- Improved the translations stuffs
  [lucmult]

- Changed the way to translate xml/html entities from summary, now 
  using BeautifulSoup. Old way was breaking with some non ascii 
  characters.
  [lucmult]

- When setting the text of a feed item during updating, store the
  mimetype as well if it is a supported one.
  Refs http://plone.org/products/feedfeeder/issues/24
  [maurits]


1.0rc6 (2009-09-21)
-------------------

- Bug fix: curly quotes getting mangled when Descriptions are built.
  Fixes http://plone.org/products/feedfeeder/issues/7
  (Merged branch maurits-cleaner-entityrefs-in-description.)
  [maurits]


1.0rc5 (2009-07-02)
-------------------

- Do not add our skin layer to Plone Default and certainly not to
  Plone Tableless, but just to all (*).  [maurits]


1.0rc4 (2009-06-18)
-------------------

- When both the updated and published date of an item is not known,
  take today as the date when first adding it.  When updating, do not
  change the original item.
  Fixes http://plone.org/products/feedfeeder/issues/21
  [maurits]

- Read tags/categories/keywords of feed items and store them on the
  created content item.  No Archetypes field, just a simple getter and
  setter called feed_tags.   Idea: Robin Harms Oredsson.
  [maurits]

- DateTime.SyntaxError is thrown with some very common US 
  Daylight Saving zones, such as EDT. We now wrap the DateTime parsing